# rubiks-cube

./: pyproject.toml
notebooks/: kernel_walkthrough.ipynb
python/: pyproject.toml
python/notebooks/: api_trace_demo.ipynb  kernel_walkthrough.ipynb
python/src/cube_kernel/: __init__.py  __main__.py  api.py  transforms.py
python/tests/: test_api.py
src/cube_kernel/: __init__.py  api.py  pretty.py  transforms.py  viz.py
tests/: test_api.py
